# BabelViscoFDTD

./: .gitignore  CITATION.cff  CMakeLists.txt  FDTD3D_CPU_VERSION.h  FDTD3D_CUDA_VERSION.h  FDTDStaggered3D_with_relaxation_python.c  GPU_KERNELS.h  Indexing.h  LICENSE  MANIFEST.in  ParticleKernel.h  README.md  State of the Project.md  StressKernel.h  _opencl_kernel.c  _prepare_kernels.py  commonDef.h  commonDefCUDA.h  kernelparamsOpenCL.h  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: build_wheels.yml
BabelViscoFDTD/: H5pySimple.py  PropagationModel.py  PropagationModel2D.py  StaggeredFDTD_2D_With_Relaxation_BASE.py  StaggeredFDTD_2D_With_Relaxation_CUDA.py  StaggeredFDTD_2D_With_Relaxation_METAL.py  StaggeredFDTD_2D_With_Relaxation_OPENCL.py  StaggeredFDTD_3D_With_Relaxation.py  StaggeredFDTD_3D_With_Relaxation_BASE.py  StaggeredFDTD_3D_With_Relaxation_CUDA.py  StaggeredFDTD_3D_With_Relaxation_CUDA2D.py  StaggeredFDTD_3D_With_Relaxation_METAL.py  StaggeredFDTD_3D_With_Relaxation_MLX.py  StaggeredFDTD_3D_With_Relaxation_OPENCL.py  _gpu_kernel2D.c  _indexing2D.h
BabelViscoFDTD/tools/: BHTE.cpp  ONeil.py  Rayleigh.py  RayleighAndBHTE.py  rayleigh.cpp  rayleighAndBHTE.hpp
Example Notebooks/: 1 - Basis of operation and flat source homogenous medium.ipynb  1 - Flat source homgenous medium.ipynb  1 - Flat source homogenous medium.ipynb  2 - Control of directivity .ipynb  3 - Focusing Sources.ipynb  4 - Water- lossless solid media.ipynb  4 - Water-solid media.ipynb  5 - Water- attenuating solid media.ipynb  6 - Non-aligned solid.ipynb
FDTDStaggered3D_with_relaxation/: H5pySimple.py  PropagationModel.py  StaggeredFDTD_3D_With_Relaxation_OPENCL.py
PerformanceTest/: PreparationsMetalM1.md  SimpleBenchmark.py
SPPVirieuxFDTD/: PropagationModel.py  StaggeredFDTD_3D_With_Relaxation_METAL.py  StaggeredFDTD_3D_With_Relaxation_OPENCL.py
SPVirieuxFDTD/: PropagationModel.py  StaggeredFDTD_3D_With_Relaxation.py  StaggeredFDTD_3D_With_Relaxation_OPENCL.py
Tests/: AnalyticalTesting.ipynb  BABELVISCOFDTD_PYTEST.md  README.md  conftest.py  example_config.ini
Tests/Generate_Outputs/: test_generate_outputs.py
Tests/Unit/BabelViscoFDTD/: test_PropagatonModel.py  test_PropagatonModel2D.py
Tests/Unit/BabelViscoFDTD/tools/: conftest.py  test_RayleighAndBHTE.py
Tutorial Notebooks/: 1 - Basis of operation and flat source homogenous medium.ipynb  2 - Control of directivity .ipynb  3 - Focusing Sources.ipynb  4 - Water- lossless solid media.ipynb  5 - Water- attenuating solid media.ipynb  6 - Non-aligned solid - SUPERPOSITION Method.ipynb  6 - Reflector interfaces.ipynb  7 - Skull material - SUPERPOSITION Method.ipynb  GMAPSolid.npz  Tools - 2 - BHTE with Multiple Fields.ipynb  Tools - 2 - BHTE.ipynb  Tools -1 - Rayleigh Integral.ipynb  __For_Analysis_kernel.m  kernel.cu-bad  t.c  t.py
Tutorial Notebooks/2D/: 1 - Basis of operation and flat source homogenous medium.ipynb  test.c
mtlpp/: mtlpp.hpp
mtlpp/examples/: 03_compute.cpp
mtlpp/scripts/: build_osx.sh
mtlpp/src/: command_queue.hpp  command_queue.mm  render_command_encoder.mm
pi_ocl/: CMakeLists.txt  Makefile  deviceInfoQuery.c  device_info.c  device_picker.h  pi_ocl.c
src/: CMakeLists.txt  CompileInMatlab.m  FDTD3D_CPU_VERSION.h  FDTD3D_GPU_VERSION.h  FDTDStaggered3D_with_relaxation_python.c  FDTDStaggered3D_with_relaxation_python.cpp  FDTDStaggered3D_with_relaxation_python.cu  GPU_KERNELS.h  GPU_KERNELS2D.h  Indexing.h  ParticleKernel.h  ParticleKernel2D.h  PressureKernel.h  SensorsKernel.h  SensorsKernel2D.h  SensorsParticleKernel.h  StressKernel.h  StressKernel2D.h  commonDef.h  commonDefCUDA.h  commonDefGPU.h  kernelparamsMetal.h  kernelparamsMetal2D.h  kernelparamsOpenCL.h  kernelparamsOpenCL2D.h  page_memory.c
src/Metal/: MetalSwift.swift  Package.swift
src/Metal/.build/: debug.yaml  manifest.db  manifest.db-shm
src/Metal/.build/x86_64-apple-macosx/: build.db
src/Metal/Sources/BabelMetal/: Babel.metal  BabelMetal.swift  arguments.h  bridge.h
src/Metal/Sources/RayleighMetal/: Rayleigh.metal  RayleighMetal.swift
src/mtlpp/: mtlpp.hpp  mtlpp.mm
src/mtlpp/examples/: 03_compute.cpp
src/mtlpp/src/: device.hpp  device.mm  kernels.h  ns.mm
