# if(APPLE)
#     set (CMAKE_OSX_DEPLOYMENT_TARGET "11" CACHE STRING "Minimum OS X deployment version" FORCE)
#     set (CMAKE_OSX_ARCHITECTURES "x86_64;arm64" CACHE STRING "Architectures" FORCE)
#     set (CMAKE_XCODE_ATTRIBUTE_MACOSX_DEPLOYMENT_TARGET[arch=arm64] "11.0" CACHE STRING "arm 64 minimum deployment target" FORCE)
# endif()

cmake_minimum_required(VERSION 3.7)
project(pi_ocl)
find_package(OpenCL REQUIRED)
add_executable(pi_ocl pi_ocl.c)
target_link_libraries(pi_ocl OpenCL::OpenCL)